Improve OAuth setup
